--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "My 1st Node.js command line app",
   "main": "index.js",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/davidhainish/hainish-cli.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
